## Process this file with automake to produce Makefile.in

SUBDIRS = lib src doc

EXTRA_DIST = COPYING.GPL COPYING.LIB INSTALL.dhcp_probe PLATFORMS \
	config/config.guess \
	config/config.sub \
	config/install-sh \
	config/missing \
	config/mkinstalldirs \
	config/depcomp \
	m4/ac_check_func_proto.m4 \
	m4/ac_check_struct_for.m4 \
	m4/ac_unp_check_type.m4 \
	m4/ist_require_libnet.m4 \
	m4/ist_require_pcap.m4 \
	m4/ist_sys_socket_ioctls_use_streams.m4 \
	m4/sys_errlist.m4 \
	extras/dhcp_probe.cf.sample \
	extras/dhcp_probe.FreeBSD.sh \
	extras/dhcp_probe.startup.Solaris9 \
	extras/dhcp_probe_notify \
	extras/dhcp_probe_notify2 \
	extras/mail-throttled \
	extras/README

ACLOCAL_AMFLAGS = -I m4
