## Process this file with automake to produce Makefile.in

SUBDIRS = doc src

EXTRA_DIST = LICENSE README \
	m4/ist_require_libnet.m4 \
	m4/ist_require_pcap.m4 \
	m4/ist_sys_socket_ioctls_use_streams.m4 \
	extras/dhcp_probe.cf.sample \
	extras/dhcp_probe.FreeBSD.sh \
	extras/dhcp_probe.startup.Solaris9 \
	extras/dhcp_probe.xml \
	extras/dhcp_probe_notify \
	extras/dhcp_probe_notify2 \
	extras/mail-throttled \
	extras/rotate_logs \
	extras/site-application-dhcp_probe \
	extras/README
